# src/main/java/com/mserapinas/boardgame/userservice/model/CollectionVisibility.java
@@ -1,0 +1,7 @@
+package com.mserapinas.boardgame.userservice.model;
+
+public enum CollectionVisibility {
+    PUBLIC,    // Everyone can see the collection
+    FRIENDS,   // Only friends can see the collection
+    PRIVATE    // Only the user can see the collection
+}
